# DIP_2015

./: .gitignore  mid-term.docx  mid-term.txt
assignment/hw2/: canny.cpp
assignment/hw2/fast-C-src-master/fast-corner-detection/: fast-corner-detection.sln
assignment/hw2/fast-C-src-master/fast-corner-detection/fast-corner-detection/: ReadMe.txt  fast-corner-detection.cpp  fast-corner-detection.vcxproj  fast-corner-detection.vcxproj.filters  stdafx.cpp
assignment/hw2/fast-Win32-i686/: README
assignment/hw2/matlab/: raw_show.m
assignment/hw4/: Dip.h  Image.h  morph.cpp
hw1/: CMakeLists.txt  README  bonus.cpp  dip-lib.cpp  dip.h  flip.cpp  helper.cpp  helper.h  hw1.sh  p1.cpp  p1e.cpp  p2.cpp  raw_show.cpp
hw2/: Laws_mask.m  Lawsm.m  README  bbox.m  canny.m  circle_2pi.m  dgauss.m  findoverlap.m  image_energy.m  image_stat_stand_dev.m  kmeans.m  laplacian.m  normalize.m  p1a.m  p1b.m  p1c.m  p2.fig  p2.m  p2ab.m  p2c.m  p3.m  p3c.m  plotClass.m  rect_int.m  sobel.m  stitching.m  subplottight.m  test_2pi.m  zerocross.m
hw2/example/: lawmask.m  laws.m
hw2/example/kmeans/: kmeans_demo.m
hw2/p2/: stitch-512x512.raw
hw4/: DFT2D.m  IDFT2D.m  bbox.m  bbox_test.m  bmorph.m  bwmorph.c  cvThin.c  dft_centering.m  dft_test.m  get_feature.m  glp.m  ideal_lp.m  imerode.m  median.m  minDist.m  minDist1.m  minDist2.m  minDist3.m  morph_test.m  myDFT.m  normalize.m  ordfiltn.m  p1.m  p2.m  p3.m  raw_show.asv  raw_show.m  subplottight.m  test_set.m
opencv/: CMakeLists.txt  install.txt  opencv.cpp
